added the output of trailers in the general list and on a specific page

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,4 +3,9 @@ main:
   path: ~
   controller: App\Controller\MovieController
   action: index
+show:
+    method: 'get'
+    path: 'show/{id}'
+    controller: App\Controller\MovieController
+    action: show
 
