--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "symfony/yaml": "^5.1",
     "twig/twig": "^v3.0",
     "uma/dic": "^2.0.1",
-    "ext-simplexml": "*"
+    "ext-simplexml": "*",
+    "ext-dom": "*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0.x-dev",
